--- a/vercel.json
+++ b/vercel.json
@@ -7,14 +7,14 @@
       "config": { "distDir": "dist" }
     },
     {
-      "src": "backend/api/[...all].js",
+      "src": "backend/api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/api/[...all].js"
+      "dest": "backend/api/index.js"
     },
     {
       "src": "/(.*)",
