--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ai-note-searcher-backend",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "nodemon api/index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^1.7.2",
